# ChatPlayground

./: .gitignore  README.md  cerebras_client.py  chat_main.py  gemini_client.py  instructions.yaml  pyproject.toml  requirements.txt  requirements_cerebras_chat.txt  run_app.bat  run_app.ps1  system_prompt.txt  system_prompts.json
.streamlit/: config.toml  secrets.toml
